correcting layout issues

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,9 +1,15 @@
 .profile__description {
     display: flex;
     flex-wrap: wrap;
-    max-width: 550px;
+    max-width: 500px;
     padding-left: 30px;
     height: 70px;
+}
+
+@media screen and (max-width: 820px) {
+    .profile__description {
+        max-width: 420px;
+    }
 }
 
 @media screen and (max-width: 799px) {
@@ -15,13 +21,15 @@
 @media screen and (max-width: 720px) {
     .profile__description {
         padding-top: 20px;
-        padding-left: 70px;
+        padding-left: 0;
+        justify-content: center;
     }
 }
 
 @media screen and (max-width: 422px) {
     .profile__description {
-        padding-left: 60px;
+        padding-left: 0;
         max-width: 250px;
+        justify-content: center;
     }
 }
