--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -3,16 +3,24 @@
     font-size: 42px;
     line-height: 1;
     margin: 0;
-    padding-right: 20px;
+    margin-right: 20px;
     max-width: 450px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
 }
 
+@media screen and (max-width: 870px) {
+    .profile__text {
+        max-width: 400px;
+    }
+}
+
+
 @media screen and (max-width: 799px) {
     .profile__text {
         font-size: 32px;
+        max-width: 300px;
     }
 }
 
@@ -20,6 +28,6 @@
     .profile__text {
         font-size: 22px;
         padding-right: 12px;
-
+        max-width: 220px;
     }
 }
